--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "next start",
     "dev": "next",
-    "build": "next build"
+    "build": "next build",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
