--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "dev": "next",
     "build": "next build",
-    "heroku-postbuild": "heroku-nextjs-build"
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
