--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ssr-server.js -p $PORT",
+    "start": "next start",
     "dev": "next",
     "build": "next build",
     "heroku-postbuild": "npm run build"
@@ -22,6 +22,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
+    "serve-favicon": "^2.5.0",
     "styled-jsx": "^3.2.5",
     "webfontloader": "^1.6.28"
   },
